# ChemoKernel

./: README.md
GraphKernels/: CMakeLists.txt
GraphKernels/include/GraphKernels/: Dataset.h  GraphEditDistance.h  KEditDistance.h  KRegression.h  Kashima.h  KernelPCA.h  KernelRidge.h  KernelRidgeTopN.h  LaplacianKernel.h  LaplacianKernelOriginal.h  SVM.h  WeightedAverage.hpp
GraphKernels/include/cimg/: CImg.h
GraphKernels/include/gtb/: BagOfTrails.h  BagTrailKernel.h  EditDistance.h  GraphKernel.h  KMean.h  KWMean.h  RandomWalkKernel.h  ShapeBagTrails.h  TrailKernel.h  VertexCovering.h
GraphKernels/include/pandore/: bundled.h  collection.h  dimension.h  errc.h  graph.h  image.h  main.h  neighbours.h  pandore.h  panfile.h  plimits.h  plist.h  pobject.h  point.h  promotions.h  ptypes.h  pversion.h  pviewer.h  region.h
GraphKernels/src/GraphKernels/: CMakeLists.txt  Dataset.cpp  GraphEditDistance.cpp  KEditDistance.cpp  Kashima.cpp  KernelPCA.cpp  KernelRidge.cpp  KernelRidgeTopN.cpp  LaplacianKernel.cpp  LaplacianKernelOriginal.cpp  Makefile  SVM.cpp  WeightedAverage.cpp
GraphKernels/src/gtb/: CMakeLists.txt  EditDistance.cpp  KMean.cpp  KWMean.cpp  RandomWalkKernel.cpp  ShapeBagTrails.cpp  VertexCovering.cpp
GraphKernels/src/libsvm/: CMakeLists.txt  libsvm.cpp
GraphKernels/src/pandore/: CMakeLists.txt
GraphKernels/src/pandore/objects/: bundled.cpp  collection.cpp  errc.cpp  graph.cpp  main.cpp  pobject.cpp  region.cpp
Molecules/: CMakeLists.txt
Molecules/include/: AugmentedCycleKernel.h  BinaryKernel.h  CombinedKernel.h  CompleteGaussianKernel.h  ContractedCycleKernel.h  CycleKernel.h  GaussianKernel.h  GraphFileKernel.h  GraphletCountKernel.h  HorvathKernel.h  InnerGaussianKernel.h  InnerProductKernel.h  InterTreeletKernel.h  IntersectionKernel.h  KPrototypeEditDistance.h  Kernel.h  MinMaxKernel.h  MoleculeGraph.h  MoleculeGraphEditDistance.h  MoleculeGraphEditDistanceMCS.h  MoleculeGraphEditDistanceV2.h  MoleculeSpectrumKernel.h  MoleculesDataset.h  PolynomialKernel.h  RandomKernel.h  StereoName.hpp  SubTreeKernel.hpp  TanimotoKernel.h  TreeletBinaryKernel.h  TreeletCompleteGaussianKernel.h  TreeletCycleKernel.h  TreeletEditDistance.h  TreeletEnumerator.h  TreeletEnumeratorAugmentedCycles.h  TreeletGaussianKernel.h  TreeletInnerGaussianKernel.h  TreeletInnerProductKernel.h  TreeletIntersectionKernel.h  TreeletJaccardKernel.h  TreeletKernel.h  (+8 more)
Molecules/src/: #TreeletEnumerator.cpp#  .#TreeletEnumerator.cpp  .dependfile  AugmentedCycleKernel.cpp  BinaryKernel.cpp  CMakeLists.txt  CombinedKernel.cpp  CompleteGaussianKernel.cpp  ContractedCycleKernel.cpp  CycleKernel.cpp  GaussianKernel.cpp  GraphFileKernel.cpp  GraphletCountKernel.cpp  HorvathKernel.cpp  InnerGaussianKernel.cpp  InnerProductKernel.cpp  InterTreeletKernel.cpp  IntersectionKernel.cpp  KPrototypeEditDistance.cpp  MinMaxKernel.cpp  MoleculeGraph.cpp  MoleculeGraphAugmentedCycle.cpp  MoleculeGraphContractedCycleHypergraph.cpp  MoleculeGraphCycle.cpp  MoleculeGraphEditDistance.cpp  MoleculeGraphEditDistanceMCS.cpp  MoleculeGraphEditDistanceV2.cpp  MoleculeGraphLabeledSpectrum.cpp  MoleculeGraphUnlabeledSpectrum.cpp  MoleculeSpectrumKernel.cpp  MoleculesDataset.cpp  PolynomialKernel.cpp  RandomKernel.cpp  StereoName.cpp  SubTreeKernel.cpp  TanimotoKernel.cpp  TreeletBinaryKernel.cpp  TreeletCompleteGaussianKernel.cpp  TreeletCycleKernel.cpp  TreeletEditDistance.cpp  (+53 more)
